// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Navigation Component > renders correctly when journal link is active 1`] = `
<div>
  <div
    class="mb-12 mt-16 flex flex-col items-center lg:mb-0 lg:mt-0 lg:flex-row lg:items-start"
  >
    <a
      class="mb-5 text-lg lg:mb-0 lg:mr-12"
      href="/"
    >
      <span
        class="text-stone-300 hover:text-stone-100"
      >
        Home
      </span>
    </a>
    <a
      class="mb-5 text-lg lg:mb-0 lg:mr-12"
      href="/about"
    >
      <span
        class="text-stone-300 hover:text-stone-100"
      >
        About
      </span>
    </a>
    <a
      class="mb-5 text-lg lg:mb-0 lg:mr-12"
      href="/publications"
    >
      <span
        class="text-stone-300 hover:text-stone-100"
      >
        Publications
      </span>
    </a>
  </div>
</div>
`;

exports[`Navigation Component > renders correctly when no link is active 1`] = `
<div>
  <div
    class="mb-12 mt-16 flex flex-col items-center lg:mb-0 lg:mt-0 lg:flex-row lg:items-start"
  >
    <a
      class="mb-5 text-2xl font-bold lg:mb-0 lg:mr-12 lg:text-base"
      href="/"
    >
      <span
        class="text-stone-300 hover:text-stone-100"
      >
        Home
      </span>
    </a>
    <a
      class="mb-5 text-lg lg:mb-0 lg:mr-12"
      href="/about"
    >
      <span
        class="text-stone-300 hover:text-stone-100"
      >
        About
      </span>
    </a>
    <a
      class="mb-5 text-lg lg:mb-0 lg:mr-12"
      href="/publications"
    >
      <span
        class="text-stone-300 hover:text-stone-100"
      >
        Publications
      </span>
    </a>
  </div>
</div>
`;

exports[`Navigation Component > renders correctly when statistics link is active 1`] = `
<div>
  <div
    class="mb-12 mt-16 flex flex-col items-center lg:mb-0 lg:mt-0 lg:flex-row lg:items-start"
  >
    <a
      class="mb-5 text-lg lg:mb-0 lg:mr-12"
      href="/"
    >
      <span
        class="text-stone-300 hover:text-stone-100"
      >
        Home
      </span>
    </a>
    <a
      class="mb-5 text-lg lg:mb-0 lg:mr-12"
      href="/about"
    >
      <span
        class="text-stone-300 hover:text-stone-100"
      >
        About
      </span>
    </a>
    <a
      class="mb-5 text-lg lg:mb-0 lg:mr-12"
      href="/publications"
    >
      <span
        class="text-stone-300 hover:text-stone-100"
      >
        Publications
      </span>
    </a>
  </div>
</div>
`;
